@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-05-08T08:26:14Z",
+  "count" : 5,
+  "count_minmax" : [ 5, 5 ],
+  "count_prev_day_inc" : 5,
+  "count_prev_day_dec" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_prev_day_inc" : 1,
+  "uniques_prev_day_dec" : 0
+}
