@@ -1,14 +1,21 @@
 {
-  "timestamp" : "2022-05-04T02:02:07Z",
+  "timestamp" : "2022-05-08T08:26:14Z",
   "count_outdated" : 29,
   "uniques_outdated" : 5,
-  "count" : 30,
-  "uniques" : 6,
+  "count" : 35,
+  "uniques" : 7,
   "views" : [
     {
       "timestamp": "2022-05-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
