@@ -1,3 +1,9 @@
+2022-05-08T08:26:14Z:
+* notice: last 14d: all unq: 6 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 29 5 / 30 6
+* notice: next accum: outdated-all outdated-unq / all unq: 29 5 / 35 7
+* notice: prev json diff // prev day diff: unq all: +1 +5 / -0 -0 // +1 +5 / -0 -0
+
 2022-04-30T16:29:58Z:
 * notice: last 14d: all unq: 10 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 2 2 / 21 5
